change title of website

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<title>Testing Website</title>
+<title>Annas website</title>
 <meta name="discription"content="This webpage is meant for testing purpose."/>
 <meta name="Keywords"content="Testing web designing, experimenting with web designing"/>
 <meta http-equiv="author"content="Syed Annas Ali"/>
