added draggable attribute to the img tag

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ for testing purpose
 <!--href tag is used to give a reference or provide address-->
 </p>
 <h2> Mega CharizardX </h2>
-<p>  <img src="Mega-Charizard.png" Width="500" title="Charizard-MegaX"alt="Mega Charizard"> </p>
+<p>  <img src="Mega-Charizard.png" Width="500" title="Charizard-MegaX"alt="Mega Charizard" draggable="true"> </p>
 <!--title tag can be used inside any other tag e.g:here it is used to provide tooltip for the image and alt tag is used to provide alternate text for the iamge-->
 <form action="" method="">
 <fieldset>
