--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Your age: <input type="number" name="numdays" min="1" max="100">
 
 <p>Suprise</p>
 <audio controls>
-<source src="Suprise.mp3">
+<source src="Suprise.mp3" autoplay loop>
 </audio>
 
  <p> <a name="List">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Just a &nbsp; "List" </a>
