--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ Your age: <input type="number" name="numdays" min="1" max="100">
 <Br>
 
 <p>Suprise</p>
-<audio controls>
-<source src="Suprise.mp3" autoplay loop>
+<audio controls autoplay loop>
+<source src="Suprise.mp3">
 </audio>
 
  <p> <a name="List">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Just a &nbsp; "List" </a>
