--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Your age: <input type="number" name="numdays" min="1" max="100">
 <Br>
 
 <p>Suprise</p>
-<audio controls autoplay loop>
+<audio controls="audiocontrol"autoplay loop>
 <source src="Suprise.mp3">
 </audio>
 
