fixed Back to the TOP link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<title><a name="top">Annas website</a></title>
+<title>Annas website</title>
 <meta name="discription"content="This webpage is meant for testing purpose."/>
 <meta name="Keywords"content="Testing web designing, experimenting with web designing"/>
 <meta http-equiv="author"content="Syed Annas Ali"/>
@@ -11,7 +11,7 @@
 <!--meta tag is used for text engines or for telling a little about the website-->
 </head>
 <body>
-<h1> This is a test </h1>
+<h1><a name="top"></a>This is a test</a></h1>
 <p>Nothing &nbsp; "important" &nbsp; to write over here cause this website is just 
 for testing purpose
 <ul>
@@ -76,8 +76,8 @@ Your age: <input type="number" name="numdays" min="1" max="100">
 <audio controls="audiocontrol"autoplay loop>
 <source src="Suprise.mp3">
 </audio>
-<a href="#top"> Back to the TOP </a>
- <p> <a name="List">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Just a &nbsp; "List" </a>
+<p><a href="#top"> Back to the TOP </a></p>
+ <a name="List">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Just a &nbsp; "List" </a></p>
 
 <ul>
           <li>Hello</li>
@@ -119,7 +119,7 @@ Your age: <input type="number" name="numdays" min="1" max="100">
 <Br>
 <Br>
 <Br>
-     <a href="#top"> Back to the TOP </a>
+     <p><a href="#top"> Back to the TOP </a></p>
 <p> <a name="Table"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspJust a &nbsp "Table" </a>
 </p>
 
