fixed audio tag

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Your age: <input type="number" name="numdays" min="1" max="100">
 <Br>
 
 <p>Suprise</p>
-<Video>
+<Video width="640" height="360" controls>
 <source src="PPAP.mp4"/>     
 </Video>
 <audio controls="audiocontrol"autoplay loop>
