added style tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta http-equiv="author"content="Syed Annas Ali"/>
 <meta http-equiv="content-language"content="en-us"/>
 <!--meta tag is used for text engines or for telling a little about the website-->
+<style>{h1 Background-color:Blue; }</style>
 </head>
 <body>
 <h1><a name="top"></a>This is a test</a></h1>
@@ -72,7 +73,7 @@ Your age: <input type="number" name="numdays" min="1" max="100">
 <Br>
 <Br>
 
-<H1>Suprise</H1>
+<h3>Suprise</h3>
 <p>This is the video version</p>
 <Video width="640" height="360" controls>
 <source src="PPAP.mp4"/>     
