added style to paragraph and add color to font

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <meta http-equiv="author"content="Syed Annas Ali"/>
 <meta http-equiv="content-language"content="en-us"/>
 <!--meta tag is used for text engines or for telling a little about the website-->
-<style>h1,h2,h3{ Background-color:red; }</style>
+<style>h1,h2,h3{ Background-color:red; }
+h1{color: steelblue;}
+h2{color: springgreen;}
+h3{color: salmon;}
+p{background-color: navy; color: lime;
+font:Hokaide;}</style>
 </head>
 <body>
 <h1><a name="top"></a>This is a test</a></h1>
