changed paragraph font style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ h1{color: steelblue;}
 h2{color: springgreen;}
 h3{color: salmon;}
 p{background-color: navy; color: lime;
-font-family:Hokaide;}</style>
+font-family:Courier New;}</style>
 </head>
 <body>
 <h1><a name="top"></a>This is a test</a></h1>
