added border to p tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ h1{color: steelblue;}
 h2{color: springgreen;}
 h3{color: salmon;}
 p{background-color: navy; color: lime;
-font-family:Courier New;}</style>
+font-family:Courier New;border:3px goldenrod;}</style>
 </head>
 <body>
 <h1><a name="top"></a>This is a test</a></h1>
@@ -69,7 +69,7 @@ When were you born?
 Your age: <input type="number" name="numdays" min="1" max="100">
 </fieldset>
 </form>
-<p><b> This is a bold element.</b> <br><i> This is a italic element.</i> <br><strong> this is a strong element.</strong> <br><em> This is a em element.</em></p>
+<p><b> This is a bold element.</b> <br><i> This is an italic element.</i> <br><strong> this is a strong element.</strong> <br><em> This is an em element.</em></p>
 <!--Strong and em elements are used to emphasis and are especialy used for blind people -->
 <iframe frameborder="1" width="500" height="500" src="Firstpage.html" name="ouriframe" id="ouriframe"></iframe><br>
 <a href="Firstpage.html" target="ouriframe">previous page</a>&nbsp;&nbsp;
