--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ h1{color: steelblue;}
 h2{color: springgreen;}
 h3{color: salmon;}
 p{background-color: navy; color: lime;
-font-family:Courier New;border:3px goldenrod;}</style>
+font-family:Courier New;border:5px solid black;}</style>
 </head>
 <body>
 <h1><a name="top"></a>This is a test</a></h1>
@@ -25,7 +25,7 @@ for testing purpose
     <li> <a href="#Table"> Example of a Table </a>
 </ul>
 <!--href tag is used to give a reference or provide address-->
-</p>
+
 <h2> Mega CharizardX </h2>
 <p>  <img src="Mega-Charizard.png" Width="500" title="Charizard-MegaX"alt="Mega Charizard" draggable="true"> </p>
 <!--title tag can be used inside any other tag e.g:here it is used to provide tooltip for the image and alt tag is used to provide alternate text for the iamge-->
