removed extra p tag

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Your age: <input type="number" name="numdays" min="1" max="100">
 <source src="Suprise.mp3"/>
 </audio><br>
 <a href="#top"> Back to the TOP </a><br>
- <a name="List">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Just a &nbsp; "List" </a></p>
+ <a name="List">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Just a &nbsp; "List" </a>
 
 <ul>
           <li>Hello</li>
