Added classes to paragraph tags

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ font-family:Courier New;border:5px solid black;}</style>
 </head>
 <body>
 <h1><a name="top"></a>This is a test</a></h1>
-<p>Nothing &nbsp; "important" &nbsp; to write over here cause this website is just 
+<p class="1">Nothing &nbsp; "important" &nbsp; to write over here cause this website is just 
 for testing purpose
 <ul>
     <li> <a href="#List"> Example of a List </a>
@@ -42,12 +42,12 @@ for testing purpose
 Comments:<br>
 <textarea rows="15" cols="50"></textarea><br>
 <input type="submit" value="Submit">
-<p>Are you feeling good today</p>  
+<p class="2">Are you feeling good today</p>  
 Yes:
 <input type="radio" name="yesorno" value=""><br>
 No:
 <input type="radio" name="yesorno" value="">
-<p> Which is your Favourite food? </p>
+<p class="3"> Which is your Favourite food? </p>
 <input type="checkbox" name=""> Pizza <br>
 <input type="checkbox" name=""> Burger <br>
 <input type="checkbox" name=""> Nihari <br>
@@ -56,7 +56,7 @@ No:
 Choose a number between 1 and 50
 <input type="number" min="1" max="50">
 <br>
-<p> Which is your favourite sport?</p>
+<p class="4"> Which is your favourite sport?</p>
 <select>
 <option value="Football">Football</option>
 <option value="Basketball">Basketball</option>
@@ -64,7 +64,7 @@ Choose a number between 1 and 50
 <option value="Table Tennis">Table Tennis</option>
 <option value="Bedminton">Bedminton</option>
 </select>
-When were you born?
+<p>When were you born?</p>
 <input type="date" name="day">
 Your age: <input type="number" name="numdays" min="1" max="100">
 </fieldset>
