added and fixed paragraph classes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ font-family:Courier New;border:5px solid black;}</style>
 </head>
 <body>
 <h1><a name="top"></a>This is a test</a></h1>
-<p class="1">Nothing &nbsp; "important" &nbsp; to write over here cause this website is just 
+<p class="First">Nothing &nbsp; "important" &nbsp; to write over here cause this website is just 
 for testing purpose
 <ul>
     <li> <a href="#List"> Example of a List </a>
@@ -42,21 +42,21 @@ for testing purpose
 Comments:<br>
 <textarea rows="15" cols="50"></textarea><br>
 <input type="submit" value="Submit">
-<p class="2">Are you feeling good today</p>  
+<p class="second">Are you feeling good today</p>  
 Yes:
 <input type="radio" name="yesorno" value=""><br>
 No:
 <input type="radio" name="yesorno" value="">
-<p class="3"> Which is your Favourite food? </p>
+<p class="third"> Which is your Favourite food? </p>
 <input type="checkbox" name=""> Pizza <br>
 <input type="checkbox" name=""> Burger <br>
 <input type="checkbox" name=""> Nihari <br>
 <input type="checkbox" name="" checked="checked"> Biryani
 <br>
-Choose a number between 1 and 50
+<p class="fourth"> a number between 1 and 50</p>
 <input type="number" min="1" max="50">
 <br>
-<p class="4"> Which is your favourite sport?</p>
+<p class="fifth"> Which is your favourite sport?</p>
 <select>
 <option value="Football">Football</option>
 <option value="Basketball">Basketball</option>
@@ -64,32 +64,34 @@ Choose a number between 1 and 50
 <option value="Table Tennis">Table Tennis</option>
 <option value="Bedminton">Bedminton</option>
 </select>
-<p>When were you born?</p>
+<p class="sixth">When were you born?</p>
 <input type="date" name="day">
-Your age: <input type="number" name="numdays" min="1" max="100">
+<p class="seventh"> Your age: </p> &nbsp;<input type="number" name="numdays" min="1" max="100">
 </fieldset>
 </form>
-<p><b> This is a bold element.</b> <br><i> This is an italic element.</i> <br><strong> this is a strong element.</strong> <br><em> This is an em element.</em></p>
+<p class="bold"><b> This is a bold element.</b> 
+<p class="italic"><i> This is an italic element.</i></p>
+<p class="strong"><strong> this is a strong element.</strong> </p>
+<p class="em"><em> This is an em element.</em></p>
 <!--Strong and em elements are used to emphasis and are especialy used for blind people -->
 <iframe frameborder="1" width="500" height="500" src="Firstpage.html" name="ouriframe" id="ouriframe"></iframe><br>
 <a href="Firstpage.html" target="ouriframe">previous page</a>&nbsp;&nbsp;
 <a href="Secondpage.html" target="ouriframe">next page</a> 
-<p>Example of sub and superscripts:<br><b>H<sub>2</sub>O</b> is the formula of water.<br> He came <b>1<sup>st</sup></b>&nbsp;in the Marrathon.</p>
+<p class="eighth">Example of sub and superscripts:<br><b>H<sub>2</sub>O</b> is the formula of water.<br> He came <b>1<sup>st</sup></b>&nbsp;in the Marrathon.</p>
 <Br>
 <Br>
 
 <h3>Suprise</h3>
-<p>This is the video version</p>
+<p class="Video">This is the video version</p>
 <Video width="640" height="360" controls>
 <source src="PPAP.mp4"/>     
 </Video><br>
-<p>This is the audio version</p>
+<p class="audio">This is the audio version</p>
 <audio controls="audiocontrol"autoplay loop>
 <source src="Suprise.mp3"/>
 </audio><br>
 <a href="#top"> Back to the TOP </a><br>
- <a name="List">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Just a &nbsp; "List" </a>
-
+<p class="list"><a name="List">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Just a &nbsp; "List" </a></p>
 <ul>
           <li>Hello</li>
           <li>Hell</li>
@@ -131,7 +133,7 @@ Your age: <input type="number" name="numdays" min="1" max="100">
 <Br>
 <Br>
     <a href="#top"> Back to the TOP </a>
-<p> <a name="Table"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspJust a &nbsp "Table" </a>
+<p class="table"> <a name="Table"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspJust a &nbsp "Table" </a>
 </p>
 
 <table>
